fix: horizontal scroll removed - overflow-x set to hidden

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,12 @@ h5 {
 
 }
 
+/* jiggle fix */
+
+body {
+    overflow-x: hidden;
+}
+
 /* --------------------------------- Header */
 
 /* --------------------------------- Nav */
